kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-consent-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-consent
  template:
    metadata:
      labels:
        app: app-consent
    spec:
      containers:
      - name: app-consent
        image: oydeu/app-consent:latest
        ports:
        - containerPort: 3000
