kube/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: app-consent-service
spec:
  selector:
    app: app-consent
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
